--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "express-handlebars": "^6.0.6",
     "hbs": "^4.2.0",
     "mongodb": "^4.12.1",
     "morgan": "^1.10.0"
