--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Aswin ES",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "express-handlebars": "^6.0.6",
     "hbs": "^4.2.0",
     "mongodb": "^4.12.1",
