--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.1",
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "hbs": "^4.2.0",
     "mongodb": "^4.12.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nocache": "^3.0.4"
   }
 }
