--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Basic mongodb CRUD with admin and user access.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test-watch": "jest --watchAll",
     "start": "nodemon server.js"
   },
   "author": "Aswin ES",
@@ -12,6 +13,7 @@
   "dependencies": {
     "axios": "^1.2.1",
     "bcrypt": "^5.1.0",
+    "compression": "^1.7.4",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-handlebars": "^6.0.6",
@@ -19,6 +21,11 @@
     "hbs": "^4.2.0",
     "mongodb": "^4.12.1",
     "morgan": "^1.10.0",
-    "nocache": "^3.0.4"
+    "nocache": "^3.0.4",
+    "pm2": "^5.2.2"
+  },
+  "devDependencies": {
+    "jest": "^29.3.1",
+    "supertest": "^6.3.3"
   }
 }
